--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "formik": "^2.1.4",
     "rc-pagination": "^2.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,9 +45,11 @@
   },
   "devDependencies": {
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/react-notifications-component": "^2.4.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
